# blockchain

./: README.md
api_backend/: .gitignore  README.md  alembic.ini  main.py  psql_commands.odt  pyproject.toml
api_backend/alembic/: env.py
api_backend/alembic/versions/: info.txt
api_backend/app/: __init__.py
api_backend/app/api/utils/: item_class_utils.py  item_config_utils.py  item_utils.py
api_backend/app/api/v1/: route_brand.py  route_category.py  route_download_logs.py  route_item.py  route_item_class.py  route_item_configuration.py  route_role.py  route_user_has_role.py  route_user_profile.py
api_backend/app/core/: __init__.py  base_class.py  emails.py  file_management_utils.py  hashing.py
api_backend/app/core/schemas/: brand.py  category.py  email_confirmation.py  item.py  (+8 more)
api_backend/app/db/: base.py  create_db.py  drop_db.py  settings.py  setup_test.py  table_manager.py
api_backend/configs/: test_config.yaml
api_backend/contracts/ONLimitedNFT.sol/: ONLimitedNFT.json
api_backend/contracts/ONLimitedToken.sol/: ONLimitedToken.dbg.json  ONLimitedToken.json
api_backend/contracts/ONMarket.sol/: ONMarket.dbg.json  ONMarket.json
api_backend/scripts/: ci-pipeline.sh  create-role.sh  test.sh
api_backend/tests/: conftest.py  test_hashing.py  test_manage_db.py  test_route_brand.py  test_route_category.py  test_route_download_logs.py  test_route_item_class.py  test_route_item_config.py  test_route_role.py  test_route_user_has_role.py  test_route_user_profile.py  test_web3.py
api_backend/tests/item/: test_route_activate_item.py  test_route_burn_item.py  test_route_create_item.py  test_route_delete_item.py  test_route_get_item.py  test_route_transfer_item.py  utils.py
(+94 files in other folders)
